// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SessionListHeader /> > renders a basic header 1`] = `
<div>
  <div
    style="width: 378px;"
  >
    <header
      class="_sessionListHeader_5d8138"
    >
      <h5
        class="_font-body-lg-semibold_1jx6b_83 _title_5d8138"
      >
        Apps
      </h5>
    </header>
  </div>
</div>
`;

exports[`<SessionListHeader /> > renders a header with actions 1`] = `
<div>
  <div
    style="width: 378px;"
  >
    <header
      class="_sessionListHeader_5d8138"
    >
      <h5
        class="_font-body-lg-semibold_1jx6b_83 _title_5d8138"
      >
        Apps
      </h5>
      <button
        class="_button_1t47t_17"
        data-kind="destructive"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        End sessions
      </button>
    </header>
  </div>
</div>
`;
